FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/** end reset css**/
body {
	max-width: 1140px;
	margin: auto;
	font-family: 'Work Sans';
	font-size: 14px;
}

header {
	display: flex;
	justify-content: space-between;
	margin: 50px 0;
}

section {
	margin: 50px 0;
}

h1 {
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 22px;
	font-weight: 800;
	color: #B1663C;
}

h1>span {
	font-family: 'Work Sans';
	font-size: 10px;
	letter-spacing: 0.1em;
}

h2 {
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154;
}

nav ul {
	display: flex;
	align-items: center;
	list-style-type: none;

}

nav li {
	padding: 0 10px;
	font-size: 1.2em;
}

li:hover {
	color: #B1663C;
}

#introduction {
	display: flex;
	align-items: center;
}

#introduction figure {
	flex: 1;
}

#introduction img {
	display: block;
	margin: auto;
	width: 80%;
}

#introduction article {
	flex: 1
}

#introduction h2 {
	margin-bottom: 1em;
}

#introduction p {
	margin-bottom: 0.5em;
}

#portfolio h2 {
	text-align: center;
	margin-bottom: 1em;
}

.gallery {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column-gap: 20px;
	grid-row-gap: 20px;
}

.gallery img {
	width: 100%;

}

#contact {
	width: 50%;
	margin: auto;
}

#contact>* {
	text-align: center;

}

#contact h2 {
	margin-bottom: 20px;
}

#contact form {
	text-align: left;
	margin-top: 30px;
	display: flex;
	flex-direction: column;
}

#contact input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

#contact label {
	margin: 2em 0 1em 0;
}

#contact textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"] {
	font-family: 'Syne';
	font-weight: 700;
	color: white;
	background-color: #1D6154;
	margin: 2em auto;
	width: 180px;
	text-align: center;
	border-radius: 60px;
}

footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em;
}

/** Filters **/
:root {
	--portfolio-chart-buttons-bg-color: white;
	--portfolio-chart-buttons-bg-color-hover: rgb(231, 231, 231);
	--portfolio-chart-buttons-bg-is-active-color-hover: #184e44;
	--portfolio-chart-buttons-font-color: #1D6154;
	--portfolio-chart-error-box-bg-color: #611d1d;
}

.filter-by-category-component {
	display: flex;
	justify-content: center;
	gap: 0 1em;
	margin: 4em 0;
}

.btn {
	border: 1px solid var(--portfolio-chart-buttons-font-color);
	font-family: 'Syne';
	font-size: 1.15em;
	font-weight: 700;
	color: var(--portfolio-chart-buttons-font-color);
	background-color: var(--portfolio-chart-buttons-bg-color);
	text-align: center;
	border-radius: 60px;
	padding: 8px 1%;
	min-width: 8%;
}

.btn:hover {
	cursor: pointer;
	background-color: var(--portfolio-chart-buttons-bg-color-hover);
}

.btn.is-active:hover {
	cursor: pointer;
	background-color: var(--portfolio-chart-buttons-bg-is-active-color-hover);
}

.btn.is-active {
	color: var(--portfolio-chart-buttons-bg-color);
	background-color: var(--portfolio-chart-buttons-font-color);
}

/** Boxes **/

.prevent-select {
	user-select: none;
}

.is-box {
	background-color: var(--portfolio-chart-buttons-font-color);
	color: var(--portfolio-chart-buttons-bg-color);
	font-weight: 500;
	padding: 15px;
	border-radius: 15px;
	max-width: 45vw;
}

.is-box.error-box {
	background-color: var(--portfolio-chart-error-box-bg-color);
	color: var(--portfolio-chart-buttons-bg-color);
}

.gallery.failed-to-fetch {
	display: flex;
	justify-content: center;
}

/* Toasts */
.toasts-component>.is-toast:nth-child(1) { --nth-child: 1; }
.toasts-component>.is-toast:nth-child(2) { --nth-child: 2; }
.toasts-component>.is-toast:nth-child(3) { --nth-child: 3; }
.toasts-component>.is-toast:nth-child(4) { --nth-child: 4; }
.toasts-component>.is-toast:nth-child(5) { --nth-child: 5; }

.is-toast {
	--_default-min-width: 250px;
	--_margin-left: calc(var(--_default-min-width) / 2 * -1);
	--_delta: 30px;
	opacity: 0;
	font-weight: 500;
	min-width: var(--_default-min-width);
	margin-left: var(--_margin-left);
	background-color: #333;
	color: #fff;
	text-align: center;
	border-radius: 2px;
	padding: 16px;
	position: fixed;
	z-index: 1;
	left: 50%;
	bottom: 0;
	transition: bottom 2s, opacity 2s;
}

.is-toast.show {
	opacity: 1;
	bottom: calc(var(--_delta) * var(--nth-child));
	transition: bottom 2s, opacity 2s;
}

.is-toast.error-box {
	background-color: var(--portfolio-chart-error-box-bg-color);
	color: var(--portfolio-chart-buttons-bg-color);
}

